# DomainGPT

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/api/auth/: dependencies.py
apps/api/core/: config.py  database.py  logging.py  redis_client.py  security.py
apps/api/middleware/: logging_middleware.py
apps/api/models/: conversation.py  document.py  user.py
apps/api/routers/: auth.py  chat.py  health.py  upload.py
apps/ingestion/: chunking.py  doc_parser.py  embeddings.py  image_ocr.py  metadata.py  pdf_parser.py  txt_parser.py
apps/llm/: inference.py  lora_loader.py
apps/rag/: hybrid_search.py  pipeline.py  prompt_builder.py  reranker.py  retriever.py
apps/training/: evaluate.py  lora_train.py  merge_adapter.py  prepare_dataset.py
apps/ui/: streamlit_app.py
apps/workers/: celery_app.py  ingest_worker.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
scripts/: create_pinecone_index.py  init_db.py
tests/: test_api.py  test_ingestion.py
