[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "domaingpt"
version = "0.1.0"
description = "Enterprise AI Chatbot with RAG + LoRA fine-tuning"
requires-python = ">=3.10"
dependencies = [
    # Core API
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",
    "httpx==0.27.0",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # LangChain ecosystem
    "langchain==0.2.6",
    "langchain-community==0.2.6",
    "langchain-openai==0.1.14",
    "langchain-groq==0.1.6",
    "langchain-pinecone==0.1.1",
    "langgraph==0.1.14",

    # Vector DB
    "pinecone-client==4.1.0",

    # Embeddings
    "sentence-transformers==3.0.1",

    # Document parsing
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "pillow==10.3.0",
    "pytesseract==0.3.10",
    "unstructured[pdf,docx,image]==0.14.6",
    "pdfplumber==0.11.1",

    # Database
    "sqlalchemy==2.0.31",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",

    # Cache
    "redis==5.0.7",
    "hiredis==2.3.2",

    # Task queue
    "celery==5.4.0",
    "flower==2.0.1",

    # Storage
    "boto3==1.34.144",

    # ML / LoRA training
    "torch==2.3.1",
    "transformers==4.42.3",
    "peft==0.11.1",
    "datasets==2.20.0",
    "accelerate==0.31.0",
    "bitsandbytes==0.43.1",
    "trl==0.9.4",
    "evaluate==0.4.2",

    # Reranking
    "flashrank==0.2.6",
    "rank-bm25==0.2.2",

    # Monitoring
    "prometheus-client==0.20.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",

    # Utilities
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "structlog==24.2.0",
    "tenacity==8.4.1",
    "orjson==3.10.5",
    "aiofiles==23.2.1",
    "slowapi==0.1.9",

    # UI
    "streamlit==1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.5.0",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
